# Projeto-Banco-de-Dados

./: .env  .gitignore  Cargo.toml  HTML.html  README.md  compose.yaml  db.sqlite3  dockerfile  manage.py  requirements.txt  rodar_linux.sh  rodar_windows
ecommerce/: settings.py  urls.py
estaticos/: style.css
loja/: admin.py  models.py  urls.py  views.py
loja/static/loja/: styles.css
loja/templates/: test.html
loja/templates/loja/: cart.html  chart.html  index.html  login.html  profile.html  shop.html  signin.html  sprodutct.html  terms.html  tracking.html
loja/templates/loja/admin/: clientes.html  geral.html  importacao.html  kpis.html  produtos.html
loja/templates/loja/snippets/: caixa_produto.html  cart.html  cookies.html  footer.html  header.html  newsletter.html
loja/templatetags/: loja_extras.py
migrations/: 1_base.sql  2_correcoes.sql  3_correcoes.sql  4_correcoes.sql
paginas/: HTML.html  index.html
src/: banco.rs  db.rs  main.rs  modelos.rs
static/: index.html  login.html  shop.html  signin.html  sprodutct.html  tracking.html
static/chart/: chart.html
static/css/: style.css  styles.css
