[package]
name = "projeti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
serde_json = "1.0.83"
handlebars = { version = "5.1.2", features = ["dir_source"] }
mysql = "24.0.0"
