[package]
name = "projeti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "projeti"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
serde_json = "1.0.83"
handlebars = { version = "5.1.2", features = ["dir_source"] }
serde = "1.0.200"
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = [ "runtime-async-std", "mysql" ] }
